; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-lh7a40x/extr_irq-lpd7a40x.c_lh7a40x_cpld_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-lh7a40x/extr_irq-lpd7a40x.c_lh7a40x_cpld_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32)*, i32 (i32)* }

@CPLD_INTERRUPTS = common dso_local global i32 0, align 4
@IRQ_LPD7A40X_ETH_INT = common dso_local global i32 0, align 4
@IRQ_LPD7A400_TS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.irq_desc*)* @lh7a40x_cpld_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lh7a40x_cpld_handler(i32 %0, %struct.irq_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.irq_desc*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.irq_desc* %1, %struct.irq_desc** %4, align 8
  %6 = load i32, i32* @CPLD_INTERRUPTS, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.irq_desc*, %struct.irq_desc** %4, align 8
  %8 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32 (i32)*, i32 (i32)** %10, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 %11(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = and i32 %14, 1
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32, i32* @IRQ_LPD7A40X_ETH_INT, align 4
  %19 = call i32 @generic_handle_irq(i32 %18)
  br label %20

20:                                               ; preds = %17, %2
  %21 = load i32, i32* %5, align 4
  %22 = and i32 %21, 2
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load i32, i32* @IRQ_LPD7A400_TS, align 4
  %26 = call i32 @generic_handle_irq(i32 %25)
  br label %27

27:                                               ; preds = %24, %20
  %28 = load %struct.irq_desc*, %struct.irq_desc** %4, align 8
  %29 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32 (i32)*, i32 (i32)** %31, align 8
  %33 = load i32, i32* %3, align 4
  %34 = call i32 %32(i32 %33)
  ret void
}

declare dso_local i32 @generic_handle_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
